Priviledge is now merge in one status
